--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,13 @@ form{
   padding: 20px;
   margin: 60px 20px;
 }
+
+.note{
+  padding:10px;
+  margin-bottom: 30px;
+}
+
+.noteslist{
+  padding:20px;
+  margin-top: 60px;
+}
